feat: Introduces per-hotel rate plans endpoints
