# src/routes/hotels.js
@@ -6,19 +6,20 @@ const {
 } = require('../middlewares');
 const hotelsController = require('../controllers/hotels');
 const roomTypesController = require('../controllers/room-types');
-
-const HOTEL_ROUTE = '/hotels/:hotelAddress';
-const HOTELS_ROUTE = '/hotels';
-const ROOM_TYPES_ROUTE = '/hotels/:hotelAddress/roomTypes';
-const ROOM_TYPE_ROUTE = '/hotels/:hotelAddress/roomTypes/:roomTypeId';
+const ratePlansController = require('../controllers/rate-plans');
 
 const hotelsRouter = express.Router();
 
-hotelsRouter.get(HOTELS_ROUTE, injectWtLibs, hotelsController.findAll, handleOnChainErrors);
-hotelsRouter.get(HOTEL_ROUTE, injectWtLibs, validateHotelAddress, hotelsController.find, handleOnChainErrors);
+hotelsRouter.get('/hotels', injectWtLibs, hotelsController.findAll, handleOnChainErrors);
+hotelsRouter.get('/hotels/:hotelAddress', injectWtLibs, validateHotelAddress, hotelsController.find, handleOnChainErrors);
 
-hotelsRouter.get(ROOM_TYPES_ROUTE, injectWtLibs, validateHotelAddress, roomTypesController.findAll, handleOnChainErrors);
-hotelsRouter.get(ROOM_TYPE_ROUTE, injectWtLibs, validateHotelAddress, roomTypesController.find, handleOnChainErrors);
+hotelsRouter.get('/hotels/:hotelAddress/roomTypes', injectWtLibs, validateHotelAddress, roomTypesController.findAll, handleOnChainErrors);
+hotelsRouter.get('/hotels/:hotelAddress/roomTypes/:roomTypeId', injectWtLibs, validateHotelAddress, roomTypesController.find, handleOnChainErrors);
+// TODO
+// hotelsRouter.get('/hotels/:hotelAddress/roomTypes/:roomTypeId/ratePlans', injectWtLibs, validateHotelAddress, roomTypesController.findRatePlans, handleOnChainErrors);
+
+hotelsRouter.get('/hotels/:hotelAddress/ratePlans', injectWtLibs, validateHotelAddress, ratePlansController.findAll, handleOnChainErrors);
+hotelsRouter.get('/hotels/:hotelAddress/ratePlans/:ratePlanId', injectWtLibs, validateHotelAddress, ratePlansController.find, handleOnChainErrors);
 
 module.exports = {
   hotelsRouter,
